# artemis

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  justfile  rustfmt.toml
crates/artemis-core/: Cargo.toml
crates/artemis-core/src/: engine.rs  lib.rs  types.rs
crates/artemis-core/src/collectors/: block_collector.rs  log_collector.rs  mempool_collector.rs  mevshare_collector.rs  mod.rs  opensea_order_collector.rs
crates/artemis-core/src/executors/: flashbots_executor.rs  mempool_executor.rs  mev_share_executor.rs  mod.rs
crates/artemis-core/src/utilities/: mod.rs  state_override_middleware.rs
crates/artemis-core/tests/: main.rs
crates/clients/chainbound/: Cargo.toml  README.md
crates/clients/chainbound/src/: bundle.rs  echo.rs  fiber.rs  lib.rs  mev_bundle.rs  types.rs  utils.rs
crates/clients/matchmaker/: Cargo.toml  README.md
crates/clients/matchmaker/src/: client.rs  flashbots_signer.rs  lib.rs  types.rs
crates/clients/opensea-v2/: Cargo.toml  README.md
crates/clients/opensea-v2/resources/: sample_response.json  sample_response_1.5.json
crates/clients/opensea-v2/src/: client.rs  constants.rs  lib.rs  types.rs
crates/mev-share-backtesting/: Cargo.toml
crates/mev-share-backtesting/src/: main.rs
crates/strategies/mev-share-uni-arb/: Cargo.toml  README.md  protocols.json
crates/strategies/mev-share-uni-arb/bindings/: Cargo.toml
crates/strategies/mev-share-uni-arb/bindings/src/: blind_arb.rs  i_uniswap_v2_pair.rs  i_uniswap_v3_pool.rs  i_uniswap_v3_swap_callback.rs  iweth.rs  lib.rs  owned.rs
crates/strategies/mev-share-uni-arb/contracts/: foundry.toml
crates/strategies/mev-share-uni-arb/contracts/lib/forge-std/lib/ds-test/demo/: demo.sol
crates/strategies/mev-share-uni-arb/contracts/lib/forge-std/src/: console.sol  console2.sol
crates/strategies/mev-share-uni-arb/contracts/lib/solmate/: package-lock.json
crates/strategies/mev-share-uni-arb/contracts/lib/solmate/lib/ds-test/src/: test.sol
crates/strategies/mev-share-uni-arb/contracts/lib/solmate/src/auth/: Auth.sol
crates/strategies/mev-share-uni-arb/contracts/lib/solmate/src/auth/authorities/: MultiRolesAuthority.sol
crates/strategies/mev-share-uni-arb/contracts/lib/solmate/src/test/: Auth.t.sol  CREATE3.t.sol  DSTestPlus.t.sol  ERC1155.t.sol  ERC4626.t.sol  FixedPointMathLib.t.sol  MerkleProofLib.t.sol  MultiRolesAuthority.t.sol  RolesAuthority.t.sol  SSTORE2.t.sol  SafeTransferLib.t.sol  SignedWadMath.t.sol
crates/strategies/mev-share-uni-arb/contracts/lib/solmate/src/test/utils/: DSTestPlus.sol  Hevm.sol
crates/strategies/mev-share-uni-arb/contracts/lib/solmate/src/tokens/: ERC1155.sol  ERC20.sol  ERC721.sol
crates/strategies/mev-share-uni-arb/contracts/lib/solmate/src/utils/: CREATE3.sol  FixedPointMathLib.sol  LibString.sol  MerkleProofLib.sol  SSTORE2.sol  SafeTransferLib.sol
crates/strategies/mev-share-uni-arb/contracts/src/: BlindArb.sol
crates/strategies/mev-share-uni-arb/contracts/test/: BlindArb.t.sol
crates/strategies/mev-share-uni-arb/resources/: uni_sushi_weth_pools.csv  uni_sushi_weth_pools.sql  v3_v2_pools.csv  v3_v2_pools.sql
crates/strategies/mev-share-uni-arb/src/: constants.rs  lib.rs  strategy.rs  types.rs
crates/strategies/opensea-sudo-arb/: .gas-snapshot  Cargo.toml  README.md  protocols.json
crates/strategies/opensea-sudo-arb/bindings/: Cargo.toml
crates/strategies/opensea-sudo-arb/bindings/src/: address.rs  amount_derivation_errors.rs  amount_deriver.rs  assertions.rs  basic_order_fulfiller.rs  conduit.rs  conduit_constants.rs  conduit_controller_interface.rs  conduit_enums.rs  conduit_interface.rs  conduit_structs.rs  consideration.rs  consideration_base.rs  consideration_constants.rs  consideration_enums.rs  consideration_events_and_errors.rs  consideration_interface.rs  consideration_structs.rs  context.rs  counter_manager.rs  criteria_resolution.rs  criteria_resolution_errors.rs  curve_error_codes.rs  eip1271_interface.rs  enumerable_set.rs  erc1155_holder.rs  erc1155_receiver.rs  erc165.rs  erc20.rs  executor.rs  fixed_point_math_lib.rs  fulfillment_application_errors.rs  fulfillment_applier.rs  getters_and_derivers.rs  i_curve.rs  i_ownership_transfer_callback.rs  ierc1155.rs  ierc1155_receiver.rs  ierc165.rs  ierc721.rs  (+42 more)
crates/strategies/opensea-sudo-arb/contracts/: README.md  foundry.toml
crates/strategies/opensea-sudo-arb/contracts/lib/forge-std/: package.json
crates/strategies/opensea-sudo-arb/contracts/lib/solmate/src/auth/authorities/: RolesAuthority.sol
crates/strategies/opensea-sudo-arb/contracts/lib/solmate/src/mixins/: ERC4626.sol
crates/strategies/opensea-sudo-arb/contracts/lib/solmate/src/test/: ERC20.t.sol  ERC721.t.sol
crates/strategies/opensea-sudo-arb/contracts/lib/solmate/src/utils/: SignedWadMath.sol
crates/strategies/opensea-sudo-arb/contracts/scripts/: VerifyHuff.s.sol
crates/strategies/opensea-sudo-arb/contracts/src/: SudoOpenseaArb.sol  SudoPairQuoter.sol
crates/strategies/opensea-sudo-arb/contracts/src/huff/: LibCall.huff  LibConst.huff  SudoOpenseaArb.huff  SudoOpenseaArbCompiled.sol
crates/strategies/opensea-sudo-arb/contracts/src/protocols/LSSVMPairEnumerableETH/contracts/: LSSVMPairETH.sol
crates/strategies/opensea-sudo-arb/contracts/src/protocols/LSSVMPairEnumerableETH/contracts/bonding-curves/: ICurve.sol
crates/strategies/opensea-sudo-arb/contracts/src/protocols/LSSVMPairFactory/contracts/: ILSSVMPairFactoryLike.sol  LSSVMPair.sol  LSSVMPairERC20.sol  LSSVMPairEnumerable.sol  LSSVMPairEnumerableERC20.sol  LSSVMPairEnumerableETH.sol  LSSVMPairFactory.sol  LSSVMPairMissingEnumerable.sol  LSSVMPairMissingEnumerableERC20.sol  LSSVMPairMissingEnumerableETH.sol  LSSVMRouter.sol
crates/strategies/opensea-sudo-arb/contracts/src/protocols/Seaport/contracts/: Seaport.sol
crates/strategies/opensea-sudo-arb/contracts/test/: SudoOpenseaArb.t.sol  SudoOpenseaArbFork.t.sol  SudoPairQuoter.t.sol
crates/strategies/opensea-sudo-arb/src/: constants.rs  lib.rs  strategy.rs  types.rs
examples/mev-share-arb/: Cargo.toml
examples/mev-share-arb/src/: main.rs
(+89 files in other folders)
