[workspace]
members = [
    "bin/artemis",
    "bin/cli",
    "crates/artemis-core",
    "crates/generator",
    "crates/strategies/*",
    "crates/clients/*", 
    "examples/*",
]

default-members = ["bin/artemis", "bin/cli"]

[workspace.dependencies]
## eth
ethers = { version = "2", features = ["ws", "rustls"]}
ethers-signers = "2.0"


[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

