[package]
name = "artemis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2", features = ["ws", "rustls"]}
tokio = { version = "1.18", features = ["full"] }
eyre = "0.6"
dotenv = "0.15.0"
futures = "0.3"
tokio-tungstenite = "*"
async-trait = "0.1.64"
opensea-stream = { git = "https://github.com/FrankieIsLost/opensea-stream-rs"}
ethers-flashbots = { git = "https://github.com/FrankieIsLost/ethers-flashbots", features = ["rustls"] }
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
serde = "1.0.152"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio-stream = { version = "0.1", features = ['sync'] }
async-stream = "0.3.4"
anyhow = "1.0.70"
thiserror = "1.0.40"
tracing = "0.1.37"


[build-dependencies]
ethers = { version = "2", features = ["ws", "rustls"]}
eyre = "0.6"
