[package]
name = "mev-share-backtesting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matchmaker = { path = "../clients/matchmaker" }
serde_json = "1.0.96"
foundry-evm = { git = "https://github.com/foundry-rs/foundry" }
tokio = "1.28.2"
ethers = {  version = "2", features = ["ws", "rustls"]}

