[package]
name = "opensea-v2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ethers = {  version = "2", features = ["ws", "rustls"]}
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
serde = "1.0.152"
thiserror = "1.0.40"

[dev-dependencies]
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
