[package]
name = "opensea-sudo-arb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2", features = ["ws", "rustls"]}
tokio = { version = "1.18", features = ["full"] }
dotenv = "0.15.0"
async-trait = "0.1.64"
artemis-core = { path = "../../artemis-core" }
bindings = { path = "./bindings" }
opensea-stream = { git = "https://github.com/FrankieIsLost/opensea-stream-rs"}
futures = "0.3.27"
opensea-v2 = { path = "../../clients/opensea-v2" }
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"


