[package]
name = "opensea-sudo-arb"
version = "0.1.0"
edition = "2021"

[dependencies]

## eth
artemis-core = { path = "../../artemis-core" }
ethers = { version = "2", features = ["ws", "rustls"]}
bindings = { path = "./bindings" }
opensea-stream = { git = "https://github.com/FrankieIsLost/opensea-stream-rs"}
opensea-v2 = { path = "../../clients/opensea-v2" }

## async
async-trait = "0.1.64"

## misc
anyhow = "1.0.70"
tracing = "0.1.37"


